Lots of misc polish and fixes to my widgets dark mode styling; tweaks to font rendering and input display

--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -23,6 +23,7 @@ $color-features-dark: #295b99;
 $color-blue-hover-dark: #1b304b;
 $color-link-dark: #61a4e2;
 
+$color-input-desc-dark: #111317;
 $color-input-box-bg-dark: #30323b;
 $color-input-box-border-dark: #13151a;
 
